--- a/example/index.html
+++ b/example/index.html
@@ -36,6 +36,9 @@
     <li>mobile:
         <label><input v-validator:mobile="mobile" type="text" v-model="mobile"></label>
     </li>
+    <li>复杂的验证:
+        <label><input v-validator:more="more" type="text" v-model="more"></label>
+    </li>
     <li>
         <button @click="submit" type="button">SUBMIT</button>
         <button @click="check" type="button">CHECK</button>
