添加错误样式

--- a/example/index.html
+++ b/example/index.html
@@ -36,6 +36,12 @@
     <li>mobile:
         <label><input v-validator:mobile="mobile" type="text" v-model="mobile"></label>
     </li>
+    <li>密码:
+        <label><input v-validator:pwd="pwd" type="text" v-model="pwd"></label>
+    </li>
+    <li>确认密码:
+        <label><input v-validator:repwd="repwd" type="text" v-model="repwd"></label>
+    </li>
     <li>复杂的验证:
         <label><input v-validator:more="more" type="text" v-model="more"></label>
     </li>
